force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductFamily__c</fullName>
    <description>This field captures the product family for the product.</description>
    <inlineHelpText>This field captures the product family for the product.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additive</fullName>
                <label>ADDITIVE</label>
            </value>
            <value>
                <fullName>ATHOS</fullName>
            </value>
            <value>
                <fullName>BASICA</fullName>
            </value>
            <value>
                <fullName>BLENDS</fullName>
            </value>
            <value>
                <fullName>BORON</fullName>
            </value>
            <value>
                <fullName>Co-Product</fullName>
                <label>CO-PRODUCT</label>
            </value>
            <value>
                <fullName>DAP-MAP</fullName>
            </value>
            <value>
                <fullName>EXCELLEN</fullName>
            </value>
            <value>
                <fullName>EXCELLEN BLENDS</fullName>
            </value>
            <value>
                <fullName>FEED</fullName>
            </value>
            <value>
                <fullName>Fluosilic Acid</fullName>
            </value>
            <value>
                <fullName>GRAVEL</fullName>
            </value>
            <value>
                <fullName>Gypsum</fullName>
            </value>
            <value>
                <fullName>K-MAG</fullName>
            </value>
            <value>
                <fullName>Limestone</fullName>
            </value>
            <value>
                <fullName>Liquid Fert</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
            <value>
                <fullName>MES BLENDS</fullName>
            </value>
            <value>
                <fullName>MICRO</fullName>
            </value>
            <value>
                <fullName>MKP</fullName>
            </value>
            <value>
                <fullName>MOP</fullName>
            </value>
            <value>
                <fullName>MPASTO</fullName>
            </value>
            <value>
                <fullName>N Blends</fullName>
            </value>
            <value>
                <fullName>Nitrogen</fullName>
            </value>
            <value>
                <fullName>NPK</fullName>
            </value>
            <value>
                <fullName>NPK Blends</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
                <label>OIL</label>
            </value>
            <value>
                <fullName>P Blends</fullName>
            </value>
            <value>
                <fullName>PERFORMA BIO</fullName>
            </value>
            <value>
                <fullName>PERFORMA BLENDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>