force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductId__c</fullName>
    <description>Unique ID for product generated in Salesforce System</description>
    <formula>Id</formula>
    <inlineHelpText>Unique ID for product generated in Salesforce System</inlineHelpText>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>