force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductSalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSalesArea__c</fullName>
    <label>Product Sales Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_SalesAreaUser</valueSetName>
    </valueSet>
</CustomField>