force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSalesOrg__c</fullName>
    <label>Product Sales Org</label>
    <type>TextArea</type>
</CustomField>