force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductSegment__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSegment__c</fullName>
    <label>Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BIOSCIENCE</fullName>
            </value>
            <value>
                <fullName>CO-PRODUCT</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Fertilizer</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>