force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductShortDescription__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductShortDescription__c</fullName>
    <description>This field was created as part of user story to handle/store value for Product&apos;s Short Description</description>
    <label>Product Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>