force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductStatus__c</fullName>
    <label>Product Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>