force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductSubFamily__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSubFamily__c</fullName>
    <description>This field captures the product sub family for the product</description>
    <inlineHelpText>This field captures the product sub family for the product.</inlineHelpText>
    <label>Product Sub Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMMONIA</fullName>
            </value>
            <value>
                <fullName>APATITE</fullName>
            </value>
            <value>
                <fullName>ASPIRE</fullName>
            </value>
            <value>
                <fullName>ASPIRE FINE</fullName>
            </value>
            <value>
                <fullName>ATHOS</fullName>
            </value>
            <value>
                <fullName>BASICA</fullName>
            </value>
            <value>
                <fullName>BORON</fullName>
            </value>
            <value>
                <fullName>CFL ROCK</fullName>
            </value>
            <value>
                <fullName>CO-PRODUCT</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DAP-MAP</fullName>
            </value>
            <value>
                <fullName>EXCELLEN</fullName>
            </value>
            <value>
                <fullName>FEED</fullName>
            </value>
            <value>
                <fullName>FLUOSILIC ACID</fullName>
            </value>
            <value>
                <fullName>GRAVEL</fullName>
            </value>
            <value>
                <fullName>GYPSUM</fullName>
            </value>
            <value>
                <fullName>GYPSUM (AGRICULTURAL)</fullName>
            </value>
            <value>
                <fullName>GYPSUM (CHEMICAL)</fullName>
            </value>
            <value>
                <fullName>GYPSUM (CONSTRUCTION)</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>K BLENDS</fullName>
            </value>
            <value>
                <fullName>KMAG BLENDS</fullName>
            </value>
            <value>
                <fullName>KMAG GRANULAR</fullName>
            </value>
            <value>
                <fullName>KMAG PREMIUM</fullName>
            </value>
            <value>
                <fullName>KMAG  SALVAGE</fullName>
            </value>
            <value>
                <fullName>KMAG SPECIAL</fullName>
            </value>
            <value>
                <fullName>KMAG STANDARD</fullName>
            </value>
            <value>
                <fullName>LIMESTONE</fullName>
            </value>
            <value>
                <fullName>LIQUID FERT</fullName>
            </value>
            <value>
                <fullName>MAGNETITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>