force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADDITIVE</fullName>
            </value>
            <value>
                <fullName>Anhydrous Ammonia</fullName>
            </value>
            <value>
                <fullName>Apatite</fullName>
            </value>
            <value>
                <fullName>Aspire</fullName>
            </value>
            <value>
                <fullName>Aspire Blends</fullName>
            </value>
            <value>
                <fullName>Aspire Fine</fullName>
            </value>
            <value>
                <fullName>Athos 02.19.19</fullName>
            </value>
            <value>
                <fullName>Athos 02.19.21</fullName>
            </value>
            <value>
                <fullName>Athos 02.22.10</fullName>
            </value>
            <value>
                <fullName>Athos 02.24.06</fullName>
            </value>
            <value>
                <fullName>Athos 02.28.00</fullName>
            </value>
            <value>
                <fullName>Athos 02.28.21</fullName>
            </value>
            <value>
                <fullName>Athos 03.24.06</fullName>
            </value>
            <value>
                <fullName>Athos 03.32.08</fullName>
            </value>
            <value>
                <fullName>Athos Blends</fullName>
            </value>
            <value>
                <fullName>Basica Pro</fullName>
            </value>
            <value>
                <fullName>Bayovar</fullName>
            </value>
            <value>
                <fullName>Biofos</fullName>
            </value>
            <value>
                <fullName>Biofos Coarse</fullName>
            </value>
            <value>
                <fullName>Boron</fullName>
            </value>
            <value>
                <fullName>Concentrate</fullName>
            </value>
            <value>
                <fullName>Crystal Granular</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DAP-MAP</fullName>
            </value>
            <value>
                <fullName>Dynafos</fullName>
            </value>
            <value>
                <fullName>Dynak</fullName>
            </value>
            <value>
                <fullName>Dynamate</fullName>
            </value>
            <value>
                <fullName>Excellen</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Fluorosilicic Acid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>