force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductTypes__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductTypes__c</fullName>
    <description>This will be used to store Product Hiearchy Informaiton.</description>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commodity</fullName>
            </value>
            <value>
                <fullName>Co-Product</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
                <label>SERVICES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>