force-app/main/default/objects/Product2/fields/PMC_CPQ_QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuantityUnitOfMeasure__c</fullName>
    <description>This field has been created as part of US-Product Fields (FS Specification)</description>
    <label>Quantity Unit Of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>