force-app/main/default/objects/Product2/fields/PMC_CPQ_RAW_Material__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RAW_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RAW Material</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RAW Material</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>