force-app/main/default/objects/Product2/fields/PMC_CPQ_Region__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Region__c</fullName>
    <description>To identify which product belongs to which region so that the product selection can be done accurately. Avoiding cross-region sales. etc,</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>