force-app/main/default/objects/Product2/fields/PMC_CPQ_Registration_in_the_Ministry__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Registration_in_the_Ministry__c</fullName>
    <label>Registration in the Ministry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>