force-app/main/default/objects/Product2/fields/PMC_CPQ_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Sales_Org__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_Sales_Organization</valueSetName>
    </valueSet>
</CustomField>