force-app/main/default/objects/Product2/fields/PMC_CPQ_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4000</fullName>
                <label>4000 - Mosaic Fert Brasil</label>
            </value>
            <value>
                <fullName>4620</fullName>
                <label>4620 - Mosaic Fert Paraguay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>