force-app/main/default/objects/Product2/fields/PMC_CPQ_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesOrg__c</fullName>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_SalesOrgValue_Set</valueSetName>
    </valueSet>
</CustomField>