force-app/main/default/objects/Product2/fields/PMC_CPQ_SAPProductCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPProductCode__c</fullName>
    <description>This field captures the product code in SAP system for the product.</description>
    <externalId>true</externalId>
    <inlineHelpText>Product code in SAP system.</inlineHelpText>
    <label>SAP Product Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>