force-app/main/default/objects/Product2/fields/PMC_CPQ_Seasonality__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Seasonality__c</fullName>
    <description>This field is created as a part of story to handle/store value of Seasonality for any Product.</description>
    <label>Seasonality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>