force-app/main/default/objects/Product2/fields/PMC_CPQ_SeedzPoints__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SeedzPoints__c</fullName>
    <description>This field captures the allocated seedz points for product.</description>
    <inlineHelpText>This field captures the allocated seedz points for product.</inlineHelpText>
    <label>Seedz Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>