force-app/main/default/objects/Product2/fields/PMC_CPQ_Senave__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Senave__c</fullName>
    <label>Senave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>