force-app/main/default/objects/Product2/fields/PMC_CPQ_Silicone__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Silicone__c</fullName>
    <description>This field captures Silicon% for each product record</description>
    <inlineHelpText>This field captures Silicon% for each product record</inlineHelpText>
    <label>Silicone [SI] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>