force-app/main/default/objects/Product2/fields/PMC_CPQ_Sulfur_S04__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Sulfur_S04__c</fullName>
    <label>Sulfur [S04] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>