force-app/main/default/objects/Product2/fields/PMC_CPQ_Sulfur_SO4__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Sulfur_SO4__c</fullName>
    <label>Sulfur [SO4] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>