force-app/main/default/objects/Product2/fields/PMC_DH_CropType__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CropType__c</fullName>
    <label>Crop Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Potato</fullName>
            </value>
            <value>
                <fullName>Sugarcane</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Corn (Winter)</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Corn (Summer)</fullName>
            </value>
            <value>
                <fullName>HF</fullName>
            </value>
            <value>
                <fullName>Soy</fullName>
            </value>
            <value>
                <fullName>Beans</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
            <value>
                <fullName>Pasture</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Reforestation</fullName>
            </value>
            <value>
                <fullName>Alfalfa</fullName>
            </value>
            <value>
                <fullName>Artichoke</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Barley</fullName>
            </value>
            <value>
                <fullName>Bean</fullName>
            </value>
            <value>
                <fullName>Beans Safrinha</fullName>
            </value>
            <value>
                <fullName>Cane</fullName>
            </value>
            <value>
                <fullName>Carrot</fullName>
            </value>
            <value>
                <fullName>Cassava</fullName>
            </value>
            <value>
                <fullName>Castor bean</fullName>
            </value>
            <value>
                <fullName>Cocoa</fullName>
            </value>
            <value>
                <fullName>Coconut</fullName>
            </value>
            <value>
                <fullName>Coffee-Irrigant</fullName>
            </value>
            <value>
                <fullName>Corn</fullName>
            </value>
            <value>
                <fullName>Corn Safrinha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>