force-app/main/default/objects/Product2/fields/PMC_DH_isProcessed__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag field, which will indicate if this product record is already processed or not</description>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>