force-app/main/default/objects/Product2/fields/PMC_DH_Keywords__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Keywords__c</fullName>
    <label>PMC DH Keywords</label>
    <type>TextArea</type>
</CustomField>