force-app/main/default/objects/Product2/fields/PMC_DH_Micronutrients__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Micronutrients__c</fullName>
    <description>This field was created as part of story to handle/manage value for Micronutrient</description>
    <label>Micronutrient</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boron</fullName>
            </value>
            <value>
                <fullName>Chlorine</fullName>
            </value>
            <value>
                <fullName>Cobalt</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
            <value>
                <fullName>Manganese</fullName>
            </value>
            <value>
                <fullName>Molybdenum</fullName>
            </value>
            <value>
                <fullName>Silicone</fullName>
            </value>
            <value>
                <fullName>Zinc</fullName>
            </value>
            <value>
                <fullName>Calcium</fullName>
            </value>
            <value>
                <fullName>Magnesium</fullName>
            </value>
            <value>
                <fullName>Sulfur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>