force-app/main/default/objects/Product2/fields/PMC_DH_Potassium__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Potassium__c</fullName>
    <label>Potassium (K)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-5%</fullName>
            </value>
            <value>
                <fullName>06-10%</fullName>
            </value>
            <value>
                <fullName>11-15%</fullName>
            </value>
            <value>
                <fullName>16-20%</fullName>
            </value>
            <value>
                <fullName>21-25%</fullName>
            </value>
            <value>
                <fullName>26-30%</fullName>
            </value>
            <value>
                <fullName>31-35%</fullName>
            </value>
            <value>
                <fullName>36-40%</fullName>
            </value>
            <value>
                <fullName>41-45%</fullName>
            </value>
            <value>
                <fullName>46-50%</fullName>
            </value>
            <value>
                <fullName>51-55%</fullName>
            </value>
            <value>
                <fullName>56-60%</fullName>
            </value>
            <value>
                <fullName>61-65%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>