force-app/main/default/objects/Product2/fields/PMC_DH_Synonyms__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Synonyms__c</fullName>
    <label>PMC DH Synonyms</label>
    <type>TextArea</type>
</CustomField>