force-app/main/default/objects/Product2/fields/PMC_SS_MDMVerified__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MDMVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDM Verified</label>
    <type>Checkbox</type>
</CustomField>