force-app/main/default/objects/Product2/fields/PMCPlanning_Material__c.field-meta.xml
<CustomField>
    <fullName>PMCPlanning_Material__c</fullName>
    <label>Planning Material</label>
    <length>7</length>
    <type>Text</type>
</CustomField>