force-app/main/default/objects/Product2/recordTypes/PMC_CPQ_Brazil.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_Brazil</fullName>
    <active>false</active>
    <description>This Record Type was created as a part of story to have different functionalities for different Record Types</description>
    <label>Brazil</label>
</RecordType>