force-app/main/default/objects/Product2/recordTypes/PMC_CPQ_NA.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_NA</fullName>
    <active>true</active>
    <description>Products</description>
    <label>Products</label>
</RecordType>