force-app/main/default/objects/Product2/validationRules/Limit_Name_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Name_Length</fullName>
    <active>true</active>
    <description>Limit the Name in 40 characters</description>
    <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The name of the Product can&apos;t have more than 40 characters</errorMessage>
</ValidationRule>