force-app/main/default/objects/Product2/validationRules/PMC_CPQ_Validate_Materal_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CPQ_Validate_Materal_Group</fullName>
    <active>true</active>
    <description>Prevent typing characters in material Group field</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Material_Group__c)),
  NOT(REGEX(Material_Group__c, &quot;^[0-9]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Material_Group__c</errorDisplayField>
    <errorMessage>The Material Group field must contain numbers only.</errorMessage>
</ValidationRule>