force-app/main/default/objects/Product2/validationRules/PMC_CPQ_Validate_Product_Hierarchy.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CPQ_Validate_Product_Hierarchy</fullName>
    <active>true</active>
    <description>prevent to type characters in this field</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(PMC_CPQ_Product_Hierarchy__c)),
  NOT(REGEX(PMC_CPQ_Product_Hierarchy__c, &quot;^[0-9]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>PMC_CPQ_Product_Hierarchy__c</errorDisplayField>
    <errorMessage>The Product Hierarchy field must contain numbers only.</errorMessage>
</ValidationRule>