force-app/main/default/objects/Product2/validationRules/PMC_SS_ValidateCrossDistribution.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateCrossDistribution</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(PMC_CPQ_Cross_distribution__c, &quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>PMC_CPQ_Cross_distribution__c</errorDisplayField>
    <errorMessage>The Cross Distribution field must contain numbers only. Letters and special characters are not allowed.</errorMessage>
</ValidationRule>